# calendar-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  nixpacks.toml  pyproject.toml
.github/workflows/: backend.yml  ci.yml
app/: main.py
app/core/: config.py
app/db/: session.py
app/graphql/: schema.py
app/models/: user.py
tests/: conftest.py  test_graphql_smoke.py
