[project]
name = "vana-planner"
version = "0.1.0"
description = "Backend para Vana Planner"
authors = [
    {name = "Juan Camilo Orjuela", email = "15643199+juanor9@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "strawberry-graphql[fastapi] (>=0.275.6,<0.276.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "asyncpg (>=0.30.0,<0.31.0)"
]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# ✨ Mantener el modo paquete activado porque sí tienes /app
# y quieres instalar el proyecto como módulo
package-mode = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
ruff = "^0.12.3"
mypy = "^1.17.0"

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
unsafe-fixes = false
show-fixes = true
exclude = ["tests/", ".venv/", "__pycache__/", ".git/"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4"]
ignore = ["E501"]  # líneas largas permitidas si son necesarias

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
