[tool.poetry]
name = "vana-planner"
version = "0.1.0"
description = "Backend para Vana Planner"
authors = ["Juan Camilo Orjuela <15643199+juanor9@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
python-dotenv = ">=1.1.1,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
strawberry-graphql = {extras = ["fastapi"], version = ">=0.275.6,<0.276.0"}
sqlmodel = ">=0.0.24,<0.0.25"
asyncpg = ">=0.30.0,<0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
ruff = "^0.12.3"
mypy = "^1.17.0"
pytest-cov = "^6.2.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
unsafe-fixes = false
show-fixes = true
exclude = ["tests/", ".venv/", "__pycache__/", ".git/"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
mypy_path = "app"

[[tool.mypy.overrides]]
module = "app.db.session"
disable_error_code = ["call-overload"]